[package]
name = "geohub"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "~0.4"
postgres = { version = "~0.15", features = ["with-chrono"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

[dependencies.rocket_contrib]
version = "~0.4"
default-features = false
features = ["postgres_pool"]

